--- a/public/contact.html
+++ b/public/contact.html
@@ -1,6 +1,6 @@
 <h1>Contact Me</h1>
-<p>Tel: +46 725624609</p>
-<p>Email: lars@menzing.com</p>
+<p>Tel: +46 725000000</p>
+<p>Email: xxx@menzing.com</p>
 <p>Address:</p>
 <p>
   Splintvedsgatan 15<br />
